# deka

./: .gitattributes  .gitignore  2026-01-16-this-session-is-being-continued-from-a-previous-co.txt  AGENTS.md  API_MAPPING.md  ARCHITECTURE.md  Cargo.toml  DOCS_SYSTEM.md  IPC_STATUS.md  PHPX_FUNCTIONS.md  PHPX_INTERNALS.md  PHPX_TYPES.md  README.md  _fs_probe.phpx  deka.json  dev.ts  optimizations.md
adwa/: .gitignore  API_MAPPING.md  (+6 more)
adwa/crates/adwa-wasm/: Cargo.toml
adwa/crates/adwa-wasm/pkg/: adwa_wasm.d.ts  adwa_wasm.js  adwa_wasm_bg.wasm  adwa_wasm_bg.wasm.d.ts
adwa/crates/adwa-wasm/src/: web_container.rs
crates/bundler/: CACHE.md  Cargo.toml  OPTIMIZE.md  PARALLEL_ARCHITECTURE.md  PARALLEL_OPTIMIZATION.md
crates/bundler/src/: bundler.rs  cache.rs  lib.rs  parallel_bundler.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: lib.rs  main.rs
crates/cli/src/cli/: auth.rs  auth_store.rs  build.rs  compile.rs  db.rs  db_wasm.rs  deka_i_runtime.js  init.rs  install.rs  lsp.rs  mod.rs  pkg.rs  publish.rs  release.rs  run.rs  serve.rs  task.rs  test.rs
crates/cli/src/cli/self_cmd/: test.rs
crates/cli/src/cli/user/: mod.rs
crates/engine/: Cargo.toml
crates/engine/src/: config.rs  dispatch.rs  engine.rs  envelope.rs  lib.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs  router.rs  server.rs  utility_css.rs  websocket.rs
crates/modules_js/: Cargo.toml
crates/modules_js/src/: lib.rs  redis_client.rs
crates/modules_js/src/modules/: docker.js  docker.rs  mod.rs  postgres.rs
crates/modules_js/src/modules/deka/: cache.rs  crypto.rs  deka.js  fs.rs  mod.rs  process.rs  stdin.rs  web.rs
crates/modules_js/src/modules/deka_static/: mod.rs  static.js
crates/modules_js/src/modules/postgres/: postgres.js
crates/modules_js/src/modules/router/: mod.rs  router.js
crates/modules_js/src/modules/sqlite/: db.rs  mod.rs  ops.rs  sqlite.js
crates/modules_js/src/modules/t4/: client.rs  mod.rs  ops.rs  t4.js
crates/modules_php/: Cargo.toml  build.rs
crates/modules_php/proto/bridge/v1/: db.proto  fs.proto  net.proto
crates/modules_php/src/: compiler_api.rs  integrity.rs  lib.rs
crates/modules_php/src/modules/: mod.rs
crates/modules_php/src/modules/deka_php/: mod.rs  php.js
crates/modules_php/src/modules/php/: mod.rs  php.js
crates/modules_php/src/validation/: exports.rs  generics.rs  imports.rs  jsx.rs  mod.rs  modules.rs  patterns.rs  phpx_rules.rs  structs.rs  syntax.rs  type_checker.rs  type_syntax.rs
crates/modules_php/tests/: validation.rs
crates/modules_php/tests/fixtures/exports/: duplicate.phpx  invalid_syntax.phpx  ok.phpx  undefined.phpx
crates/modules_php/tests/fixtures/frontmatter/: invalid_template.phpx  missing_delimiter.phpx  ok.phpx
crates/modules_php/tests/fixtures/generics/: unused.phpx
crates/modules_php/tests/fixtures/imports/: default_ok.phpx  default_wasm.phpx  ok.phpx  unused.phpx
crates/modules_php/tests/fixtures/jsx/: compare_spacing.phpx  invalid_attr.phpx  server_defer_ok.phpx  unknown_component.phpx
crates/modules_php/tests/fixtures/modules/: missing_export.phpx
crates/modules_php/tests/fixtures/patterns/: enum_duplicate_case.phpx  enum_missing_case.phpx  enum_payload_mismatch.phpx
crates/modules_php/tests/fixtures/rules/: throw.phpx
crates/modules_php/tests/fixtures/structs/: missing_field.phpx  ok.phpx
crates/modules_php/tests/fixtures/syntax/: missing_semicolon.phpx
crates/modules_php/tests/fixtures/types/: generic_arity.phpx  nullable_type.phpx
crates/php-rs/: Cargo.toml  EXTEND_PHP.md  EXTENSIONS_FRAMEWORKS.md  EXTENSIONS_TIERLIST.md  INTEGRATION.md  README.md
crates/php-rs/bench/: HTTP-REPORT.md  README.md  apache.conf  apache.out  bench.php  docker-compose.yml  gop-json.php  http-perf.mjs  http-perf.sh  nginx.conf  nginx.out  php-fpm.conf  run_ab.sh  scan-framework-extensions.py  scan-packagist-extensions.py
crates/php-rs/php_modules/: json.php
crates/php-rs/src/: lib.rs  wasm_exports.rs
crates/php-rs/src/builtins/: array.rs  class.rs  filesystem.rs  html_entities.rs  json.rs  mod.rs  string.rs  variable.rs  wasm.rs
crates/php-rs/src/compiler/: chunk.rs  emitter.rs
crates/php-rs/src/core/: value.rs
crates/php-rs/src/runtime/: context.rs  core_extension.rs  date_extension.rs  json_extension.rs  mod.rs
crates/php-rs/src/sapi/: mod.rs
crates/php-rs/src/vm/: callable.rs  class_resolution.rs  engine.rs  executor.rs  frame.rs  inc_dec.rs  opcode.rs  value_extraction.rs
crates/php-rs/tests/: enum_payload_runtime.rs  namespace_resolution.rs  promotion_validation.rs
crates/platform_server/: Cargo.toml
crates/platform_server/src/: lib.rs
crates/pm/: Cargo.toml  SESSION_NOTES.md
crates/pm/src/: bun_lock.rs  cache.rs  install.rs  lock.rs  npm.rs  payload.rs  spec.rs
crates/pool/: Cargo.toml
crates/pool/src/: esm_loader.rs  isolate_pool.rs  lib.rs
crates/pool/src/validation/: mod.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: build.rs  desktop.rs  extensions.rs  js_pipeline.rs  lib.rs  run.rs  security.rs  serve.rs  serve_vfs.rs  vfs_loader.rs
crates/stdio/: Cargo.toml
crates/stdio/src/: lib.rs  terrace_font.rs
crates/transport/: Cargo.toml
crates/transport/src/: dns.rs  lib.rs
deka-validation/: Cargo.toml
deka-validation/src/: lib.rs
linkhash/rust/deka-git/: Cargo.toml  Dockerfile  Dockerfile.prebuilt  README.md  config.example.toml  config.toml
linkhash/rust/deka-git/src/: auth.rs  config.rs  db.rs  deploy.rs  issues.rs  main.rs  packages.rs  pulls.rs
runtime/crates/loop/: Cargo.toml  tmp-ink-internal.ts  tmp-ink-min.tsx  tmp-ink-steps.ts  tmp-react-reconciler.ts  tmp-widest-line.ts  tmp-yoga.ts
runtime/crates/loop/src/: cli.rs  lib.rs
runtime/crates/php-rs/: Cargo.toml
runtime/crates/php-rs/src/: lib.rs
runtime/crates/php-rs/tests/: namespace_resolution.rs
runtime/crates/wasm_guest/: Cargo.toml
runtime/crates/wasm_guest/src/: lib.rs
wosix/crates/wosix-wasm/: Cargo.toml
wosix/crates/wosix-wasm/pkg/: wosix_wasm.d.ts  wosix_wasm.js  wosix_wasm_bg.wasm  wosix_wasm_bg.wasm.d.ts
wosix/crates/wosix-wasm/src/: web_container.rs
(+2853 files in other folders)
