[package]
name = "deka-validation"
version = "0.1.0"
edition = "2021"
authors = ["Tana Network"]
description = "Shared validation and error formatting for Deka runtimes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tananetwork/deka-validation"
keywords = ["deka", "runtime", "validation", "wasm"]
categories = ["wasm", "development-tools"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
