[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = "0.1"
deno_core = { workspace = true }
pool = { path = "../pool" }
toml = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
