[package]
name = "modules_php"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
deno_core = { workspace = true }
bumpalo = "3"
php-rs = { path = "../php-rs" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
postgres = "0.19"
mysql = "26"
rusqlite = { version = "0.32", features = ["bundled"] }
wit-parser = "0.219.2"
deka-validation = { path = "../../../deka-validation" }
native-tls = "0.2"
