[package]
name = "modules_php"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
deno_core = { workspace = true }
bumpalo = "3"
bytes = "1"
chrono = { version = "0.4", features = ["clock"] }
php-rs = { path = "../php-rs" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
prost = "0.13"
sha2 = "0.10"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
mysql = "26"
rusqlite = { version = "0.32", features = ["bundled"] }
wit-parser = "0.219.2"
deka-validation = { path = "../../../deka-validation" }
runtime_core = { path = "../runtime_core" }
native-tls = "0.2"
getrandom = "0.2"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

[dev-dependencies]
tempfile = "3.23.0"
