[package]
autobins = false
name = "php-rs"
version = "0.1.0"
edition = "2024"
authors = ["Di Wu <hi@wudi.io>"]
description = "A PHP interpreter written in Rust"
keywords = ["php", "php-interpreter", "runtime", "programming-language"]
license = "MIT"
exclude = ["tools/*", "tests/*", "bin/*"]
repository = "https://github.com/wudi/php-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
indexmap = "2.0"
bumpalo = { version = "3.12", features = ["collections"] }
clap = { version = "4.5", features = ["derive"], optional = true }
rustyline = { version = "14.0", optional = true }
smallvec = "1.13"
anyhow = "1.0"
tempfile = "3.23.0"
regex = "1.12.2"
pcre2 = { version = "0.2.11", optional = true }
encoding_rs = "0.8"
chrono = "0.4"
chrono-tz = "0.10"
libc = "0.2"
num-format = "0.4"
rphonetic = "3.0.4"
serde_json = "1.0"
deka-validation = { path = "../../../deka-validation" }

# Hash extension dependencies
md-5 = "0.10"
md2 = "0.10"
md4 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
whirlpool = "0.10"
ripemd = "0.1"
tiger = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64", "xxh3"] }
crc32fast = "1.3"
adler32 = "1.2"
digest = "0.10"
hex = "0.4"
subtle = "2.5"
hmac = "0.12"
pbkdf2 = "0.12"
hkdf = "0.12"

# MySQLi extension dependencies
mysql = { version = "24.0", optional = true }

# PDO extension dependencies
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
postgres = { version = "0.19", optional = true }
oracle = { version = "0.6", optional = true }

# Zlib extension dependencies
flate2 = "1.0"

# Zip extension dependencies
zip = { version = "2.2.2", optional = true }

# OpenSSL extension dependencies
openssl = { version = "0.10.75", optional = true }
base64 = "0.21"

# BCMath extension dependencies
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"
 

# Signal handling for php-fpm
ctrlc = { version = "3.4", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }
tokio-fastcgi = { version = "1.3.0", optional = true }
multipart = { version = "0.18", optional = true }
serde = { version = "1.0", features = ["derive"] }
memchr = "2.7"
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", optional = true, features = ["cors"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
thiserror = { version = "1.0", optional = true }
wasmtime = { version = "27", optional = true }
wasmtime-wasi = { version = "27", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"

[[bin]]
name = "php"
path = "src/bin/php.rs"
required-features = ["cli"]

[[bin]]
name = "php-fpm"
path = "src/bin/php-fpm.rs"
required-features = ["fpm"]

[[bin]]
name = "dump_bytecode"
path = "src/bin/dump_bytecode.rs"
required-features = ["cli"]

[[bin]]
name = "php-wasm"
path = "src/bin/php_wasm.rs"
required-features = ["wasm-target"]

[[bin]]
name = "php-router"
path = "src/bin/php_router.rs"
required-features = ["router"]

[features]
default = ["native-extensions", "pthreads", "pcre2", "zip"]
native-extensions = ["mysqli", "pdo", "openssl"]
cli = ["dep:clap", "dep:rustyline"]
fpm = ["dep:tokio", "dep:tokio-fastcgi", "dep:multipart", "dep:ctrlc"]
mysqli = ["dep:mysql"]
pdo = ["dep:rusqlite", "dep:postgres", "dep:oracle", "dep:mysql"]
openssl = ["dep:openssl"]
pthreads = []
zip = ["dep:zip"]
wasm-target = []
router = [
    "dep:axum",
    "dep:tower-http",
    "dep:tokio",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:thiserror",
    "dep:wasmtime",
    "dep:wasmtime-wasi"
]

[dev-dependencies]
serde_json = "1.0"
