[package]
name = "platform_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
platform = { path = "../platform" }
rand = "0.8"
deno_core = { workspace = true }
deno_napi = { workspace = true }
deno_permissions = { workspace = true }
modules_common = { path = "../modules_common" }
modules_php = { path = "../modules_php" }
