[package]
name = "pm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
dirs = "5"
fs_extra = "1.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.6"
urlencoding = "2.1"
json5 = "1.3"
