[package]
name = "pm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
dirs = "5"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.6"
urlencoding = "2.1"
json5 = "1.3"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
