[package]
name = "pool"
version = "0.1.0"
edition = "2024"

[dependencies]
nanoid = { workspace = true }
core_affinity = { workspace = true }
deno_core = { workspace = true }
libc = "0.2"
num_cpus = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = "0.1"
deka-stdio = { path = "../stdio", package = "stdio" }

# Validation
swc_common = { workspace = true }
swc_ecma_ast = { workspace = true }
swc_ecma_parser = { workspace = true, features = ["typescript"] }
swc_ecma_visit = { workspace = true }

deka-validation = { path = "../../../deka-validation" }

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6.0"
