[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
runtime_core = { path = "../runtime_core" }
platform_server = { path = "../platform_server" }
engine = { path = "../engine" }
pool = { path = "../pool" }
transport = { path = "../transport" }
stdio = { path = "../stdio" }
modules_php = { path = "../modules_php" }
deno_core = { workspace = true }
notify = { workspace = true }
num_cpus = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = "0.1"
flate2 = "1.0"
