[package]
name = "transport"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["ws"] }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = "0.1"
hyper-util = { workspace = true }
socket2 = { workspace = true, features = ["all"] }
engine = { path = "../engine" }
pool = { path = "../pool" }
http = { path = "../http" }
