[package]
name = "deka-git"
version = "0.7.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
argon2 = "0.5"
rand = "0.8"
semver = "1.0"

redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

anyhow = "1.0"
thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

bytes = "1.5"

[features]
default = []
queue = ["redis"]
