[package]
name = "loop"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
runtime = { path = "../runtime" }
stdio = { path = "../stdio" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
nanoid = { workspace = true }
chrono = { workspace = true }
