[package]
autobins = false
name = "php-rs"
version = "0.1.0"
edition = "2024"
authors = ["Di Wu <hi@wudi.io>"]
description = "A PHP interpreter written in Rust"
keywords = ["php", "php-interpreter", "runtime", "programming-language"]
license = "MIT"
exclude = ["tools/*", "tests/*", "bin/*"]
repository = "https://github.com/wudi/php-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
indexmap = "2.0"
bumpalo = { version = "3.12", features = ["collections"] }
smallvec = "1.13"
anyhow = "1.0"
tempfile = "3.23.0"
regex = "1.12.2"
pcre2 = { version = "0.2.11", optional = true }
encoding_rs = "0.8"
chrono = "0.4"
chrono-tz = "0.10"
libc = "0.2"
num-format = "0.4"
rphonetic = "3.0.4"
serde_json = "1.0"
deka-validation = { path = "../../../deka-validation" }

# Builtin crypto/hash dependencies used by string/url helpers
md-5 = "0.10"
sha1 = "0.10"
crc32fast = "1.3"
digest = "0.10"
hex = "0.4"
base64 = "0.21"

# Zlib extension dependencies
flate2 = "1.0"

# BCMath extension dependencies
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"
 
serde = { version = "1.0", features = ["derive"] }
memchr = "2.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"

[[bin]]
name = "php-wasm"
path = "src/bin/php_wasm.rs"
required-features = ["wasm-target"]

[features]
default = ["pthreads", "pcre2"]
pthreads = []
wasm-target = []

[dev-dependencies]
serde_json = "1.0"
