[package]
name = "deka-wasm-guest"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["json"]
json = ["serde", "serde_json", "deka-wasm-guest-macros/json"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

deka-wasm-guest-macros = { path = "../wasm_guest_macros", default-features = false }
