[package]
name = "wosix-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Browser/WASM adapter for Wosix."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wosix-core = { path = "../wosix-core" }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = []
web = ["dep:wasm-bindgen", "dep:js-sys"]
